Updated project structure & made new AST tool